package com.pv41.rentalproperty.repository;

import com.pv41.rentalproperty.model.Image;
import org.springframework.data.jpa.repository.JpaRepository;


public interface ImageRepository extends JpaRepository<Image, Long> {

}